<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PRG14</string>

    <string name="welcome">Welcome to PRG14</string>
    <string name="Where">Where we are:</string>
    <string name="address">Sokolovská 268/115\nKarlín\n180 00 Praha 8\nCzech Republic</string>
    <string name="How_to_find">How to get to the office:</string>
    <string name="transport"><u>Metro:</u> Invalidovna (line B - yellow)\n<u>Tram:</u> 3, 8, 24, 92\n<u>Bus:</u> H1</string>

    <string name="name_sushiTime">Sushi Time</string>
    <string name="name_fastGood">FastGood</string>
    <string name="name_kebabMardin">Mardin Kebab</string>
    <string name="name_greenFactory">Green Factory</string>
    <string name="name_cafe_le_noble">Café Le Noble</string>
    <string name="name_albert">Albert</string>
    <string name="name_pizzeriaAmfora">Pizzeria Amfora</string>

    <string name="address_sushiTime">Sokolovská 115</string>
    <string name="address_fastGood">Sokolovská 115</string>
    <string name="address_kebabMardin">Molákova 36</string>
    <string name="address_green_factory">Sokolovská 136</string>
    <string name="address_cafe_le_noble">Nekvasilova 29</string>
    <string name="address_albert">Molákova 614</string>
    <string name="address_pizzeriaAmfora">Molákova 34</string>

    <string name="website_sushiTime">https://www.sushitime.cz/en/menu/</string>
    <string name="website_fastGood">https://fastgoodrustonka.cz/en/nabidka.php?restaurace=rustonka</string>
    <string name="website_greenFactory">https://www.green-factory.cz/menu-4</string>
    <string name="website_cafe_le_noble">https://www.facebook.com/cafelenoble/</string>
    <string name="website_albert">https://www.albert.cz/?en=1</string>
    <string name="website_pizzeriaAmfora">http://www.amfora-pizza.cz/jidelni-listek/</string>


    <string name="open_map"><u>Click here to open in GoogleMaps App</u></string>
    <string name="no_website">Sorry, no website!</string>
    <string name="link_to_google_maps_app">https://www.google.com/maps/place/Amazon+PRG14/@50.0984356,14.4635431,17z/data=!3m1!4b1!4m5!3m4!1s0x470b9357cb3279c3:0x44b87dbe980ba8a!8m2!3d50.0984322!4d14.4657318</string>
    <string name="name_dame_jidlo">DámeJidlo.cz</string>
    <string name="address_dame_jidlo">www.damejidlo.cz/en/</string>
    <string name="website_dame_jidlo">https://www.damejidlo.cz/en/</string>
    <string name="name_liliova_cajovna">Lily Tearoom</string>
    <string name="address_liliova_cajovna">Sokolovská 117</string>
    <string name="website_liliova_cajovna">http://liliovacajovna.cz/eng/</string>


    <string name="name_transportOverview">Overview</string>
    <string name="description_transportOverview">Prague has one of the best public transportation systems in Europe. The Prague City Transport Authority (DPP) includes metro (subway), trams and buses and it covers majority of the city and outskirts.
        \n\nPublic transport in Prague is easy, reliable and affordable. Metro operates from around 4:45am till midnight, however there are night trams and buses.
    </string>
    <string name="name_ticketPrices">Ticket prices in Prague</string>
    <string name="description_ticketPrices"><u><b>Short term tickets:</b></u>
        \n30 minutes: 24 CZK\n90 minutes: 32 CZK\n24 hours: 110 CZK\n72 hours: 310 CZK
        \n\nRemember to validate your ticket!
        \n\n<b><u>Transferable long term passes:</u></b>
        \nMonthly: 670 CZK\nQuaterly: 1880 CZK\nAnnual: 6100CZK
        \n\n<b><u>Long term passes for Litačka holders:</u></b>
        \nMonthly: 550 CZK\nQuaterly: 1480 CZK\n5-months: 2450 CZK\nAnnual: 3650 CZK
        \n\nAll children under 6 and seniors over 70 years old may use the public transportation for free.
        \nChildren between 6 and 15 years old have discounts.
    </string>
    <string name="name_WhereToBuyTickets">Where to buy tickets</string>
    <string name="description_WhereToBuyTickets">Ticket vending machines are installed in all metro stations and at selected surface transit stops (click to see the list). They are intended for the purchase of individual (short term) tickets.</string>
    <string name="name_litackaApp">Litačka app</string>
    <string name="description_litackaApp">You can also just click here and download the app in which you can buy tickets.</string>
    <string name="name_litackaCard">Monthly pass - Litačka card</string>
    <string name="description_litackaCard">The Litačka Prague travel card (Litačka sounds like \"litachka\") is a transport card designed to be used by adults for periods of between one month and one year.
        \n\nTo get Litačka card you\'ll need to go to Skoda Palace at Jungmannova 35/29, Prague 1 with a passport-sized photo. There is a fee of 200 CZK for the \"on the go\" card.
        \n\nYou can also order Litačka via online application (click) and have your card sent to one of the contact points or by post to home address.
    </string>
    <string name="name_taxi">taxi</string>
    <string name="description_taxi">list of companies + phone numbers</string>
    <string name="website_ticketPrices">http://www.dpp.cz/en/fares-in-prague/</string>
    <string name="website_WhereToBuyTickets">http://www.dpp.cz/en/ticket-dispensers/</string>
    <string name="website_litackaApp"><![CDATA[https://play.google.com/store/apps/details?id=cz.dpp.praguepublictransport&hl=csv]]></string>
    <string name="website_litackaCard">https://www.pidlitacka.cz/registration</string>
    <string name="description_loremipsum">Cupcake ipsum dolor sit amet danish carrot cake I love icing. Ice cream wafer I love gummi bears sesame snaps fruitcake marshmallow. Bonbon jelly wafer sugar plum soufflé dessert jujubes muffin I love.</string>
    <string name="name_hrs">HRS</string>
    <string name="name_trms">TRMS</string>
    <string name="name_roc">ROC</string>
    <string name="name_it">IT helpdesk</string>
    <string name="name_learning">Employee Experience</string>
    <string name="name_es_tech">ES Tech - Employee Services</string>
    <string name="atm1">Česká spořitelna - ATM</string>
    <string name="atm2">Euronet Services - ATM</string>
    <string name="atm3">ČSOB - ATM</string>
    <string name="direction_atm1">https://www.google.com/maps/dir/Amazon+PRG14,+Sokolovsk%C3%A1,+Praga+8-Invalidovna/%C4%8Cesk%C3%A1+spo%C5%99itelna,+a.s.+-+ATM,+ALBERT,+Mol%C3%A1kova+578%2F36,+186+00+Praha+8-Invalidovna/@50.0977123,14.4629938,17z/am=t/data=!4m14!4m13!1m5!1m1!1s0x470b9357cb3279c3:0x44b87dbe980ba8a!2m2!1d14.4657318!2d50.0984322!1m5!1m1!1s0x470b9357e1f96acd:0xa8ee19ec594319c4!2m2!1d14.4649385!2d50.0973692!3e2</string>
    <string name="direction_atm2">https://www.google.com/maps/dir/Amazon+PRG14,+Sokolovsk%C3%A1,+Praga+8-Invalidovna/Euronet+Services,+spol.+s+r.o.,+Sokolovsk%C3%A1+615%2F138,+186+00+Praha+8-Invalidovna/@50.0985586,14.4648408,17z/am=t/data=!4m14!4m13!1m5!1m1!1s0x470b9357cb3279c3:0x44b87dbe980ba8a!2m2!1d14.4657318!2d50.0984322!1m5!1m1!1s0x470b9357ad6bbc31:0x49b41fdf7315cfe4!2m2!1d14.4683271!2d50.0984669!3e2</string>
    <string name="direction_atm3">https://www.google.com/maps/dir/Amazon+PRG14,+Sokolovsk%C3%A1,+Praga+8-Invalidovna/%C4%8CSOB+bankomat,+Unnamed+Road,+186+00,+Invalidovna,+186+00+Praha+8/@50.0976266,14.4634441,18z/am=t/data=!4m14!4m13!1m5!1m1!1s0x470b9357cb3279c3:0x44b87dbe980ba8a!2m2!1d14.4657318!2d50.0984322!1m5!1m1!1s0x470b95c51bc6dad1:0x207b603edbb959be!2m2!1d14.4631635!2d50.0968176!3e2</string>
    <string name="marker_address_prg14">Sokolovská 268/115</string>
    <string name="post1">Pošta Palmovka</string>
    <string name="direction_post1">https://www.google.com/maps/dir/Amazon+PRG14,+Sokolovsk%C3%A1,+Praga+8-Invalidovna/%C4%8Cesk%C3%A1+po%C5%A1ta,+Sokolovsk%C3%A1+260%2F143,+180+00+Praha+8-Palmovka/@50.1005675,14.4668802,16z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x470b9357cb3279c3:0x44b87dbe980ba8a!2m2!1d14.4657318!2d50.0984322!1m5!1m1!1s0x470b935375b3546d:0xcecdf60a471a5864!2m2!1d14.4766837!2d50.1028711!3e2</string>
    <string name="post2">Pošta Karlín</string>
    <string name="direction_post2">https://www.google.com/maps/dir/Amazon+PRG14,+Sokolovsk%C3%A1,+Praga+8-Invalidovna/Czech+Post,+Karl%C3%ADnsk%C3%A9+n%C3%A1m.+145%2F1,+186+00+Karl%C3%ADn/@50.0957748,14.4482097,15z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x470b9357cb3279c3:0x44b87dbe980ba8a!2m2!1d14.4657318!2d50.0984322!1m5!1m1!1s0x470b94a3558e9775:0xee94282d9ecc04d9!2m2!1d14.4482368!2d50.0931104!3e2</string>
    <string name="post1a">Pošta Palmovka 8:00–19:00</string>
    <string name="post2a">Pošta Karlín 8:00–18:00</string>
    <string name="prg14">PRG14</string>
    <string name="gym1">YogaKarlin</string>
    <string name="web_yogaKarlin">https://yogakarlin.cz/en/</string>
    <string name="doctor1">Hospital na Bulovce</string>
    <string name="doctor2">Hospital na Žižkově</string>
    <string name="direction_doc1">http://bulovka.cz/</string>
    <string name="direction_doc2">http://www.nemocnicenazizkove.cz/</string>


</resources>
