<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_find"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amzn_blue"
    tools:context=".fragments.LocationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/super_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/welcome" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/layout_background"
            android:orientation="vertical">

            <TextView
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Where" />

            <TextView
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/address" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/layout_background"
            android:orientation="vertical">

            <TextView
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/How_to_find" />

            <TextView
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/transport" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/layout_background"
            android:clickable="true">

            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="2dp"
                android:clickable="true"
                android:longClickable="true"
                map:uiScrollGestures="true"
                map:uiTiltGestures="true"
                map:uiZoomControls="true"
                map:uiZoomGestures="true" />
        </FrameLayout>


        <TextView
            style="@style/text_open_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="link_to_maps_app"
            android:text="@string/open_map" />


    </LinearLayout>

</ScrollView>